new versio nfor new server

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,23 +3,24 @@
     <string name="app_name">Переводчик ЖЯ</string>
     <string name="cancel">Отмена</string>
     <string name="current_call">Текущий вызов</string>
-    <string name="err_call_try_later">Во время вызова произогла ошибка. Пожалуйста, попробуйте позже</string>
+    <string name="err_call_try_later">Во время вызова произошла ошибка. Пожалуйста, попробуйте позже</string>
     <string name="error_call_failed">Звонок не удался</string>
     <string name="left_for_today">Осталось на сегодня</string>
     <string name="main_call_to_action">Нажмите для связи с переводчиком</string>
     <string name="main_minutes_left">Минут осталось:</string>
     <string name="ok">Ок</string>
     <string name="permission_rationale_call">Для общения с переводчиком необходимо разрешить доступ к камере и микрофону</string>
-    <string name="video_call_waiting_text">Пожалуйста, дождитесь пока мы соеденим вас с переводчиком. Это может занять до 5 минут</string>
+    <string name="video_call_waiting_text">Пожалуйста, дождитесь пока мы соединим вас с переводчиком. Это может занять до 5 минут</string>
     <string name="video_call_waiting_title">Ожидайте ответа…</string>
     <string name="no_minutes_left">Вы исчерпали ежедневные минуты.\nНовые минуты будут доступны завтра</string>
     <string name="main_wait_minutes_loading">Пожалуйста подождите…\nПроверяется остаток минут</string>
     <string name="internet_failure">Ошибка соедиения с сервером. Проверьте ваше интернет соединение</string>
     <string name="name_hint">Ваше имя</string>
     <string name="proceed">Продолжить</string>
-    <string name="user_name">Привет, <u>%s</u></string>
     <string name="user_name_dialog_title">Как Вас зовут?</string>
-    <string name="test_mode_notification">Сервис предоставляется в тестовом режиме\nв рабочие дни с 09:00 до 18:00</string>
+    <string name="work_time_info">Сервис предоставляется в рабочие дни\nс %s до %s %s</string>
+    <string name="timezone_ukraine">по Киевскому времени</string>
+    <string name="timezone">по Московскому времени</string>
     <string name="reason_alert_title">Выберите причину звонка</string>
     <string name="call_reason_emergency">Вызов скорой</string>
     <string name="call_reason_police">Вызов полиции</string>
@@ -35,22 +36,23 @@
     <string name="prompt_phone">Номер телефона</string>
     <string name="prompt_password">Код подтверждения</string>
     <string name="action_request_code">Отправить код</string>
-    <string name="action_login">Войти</string>
+    <string name="action_login">Продолжить</string>
     <string name="login_code_helper">Вы получите смс с кодом подтверждения</string>
     <string name="login_code_delay">Следующая попытка будет доступна через %d сек</string>
     <string name="menu_logout">Выход</string>
     <string name="error_server_base">К сожалению, возникла ошибка. Попробуйте позже</string>
-    <string name="error_validation">Пожалуйста, введите коректные данные</string>
+    <string name="error_validation">Пожалуйста, введите корректные данные</string>
     <string name="error_login">Ошибка входа</string>
     <string name="error_outside_working_time">К сожалению, вы звоните в нерабочее время</string>
     <string name="error_in_call">Вы уже общаетесь на другом устройстве</string>
     <string name="error_no_right">У вас нет прав на совершение данного действия</string>
-    <string name="login_accept"><![CDATA[Я прочитал и согласен с <a href=\'https://getbewarned.com\'>политикой конфиденциальности</a>]]></string>
+    <string name="login_accept"><![CDATA[Я прочитал(-а) и согласен(-а) с <a href=\'https://interpreter.getbw.me/docs/terms_of_use\'>условиями использования</a> и <a href=\'https://interpreter.getbw.me/docs/privacy_policy\'>политикой конфиденциальности</a>]]></string>
     <string name="main_active_till">Безлимитные звонки до</string>
     <string name="date_format">dd.MM.yy</string>
     <string name="buy_unlim_btn">Купить безлимит</string>
-    <string name="not_available_desc">У вас не осталось минут для использования сервиса.\nВы можете дождаться завтра для получения бесплатных минут либо купить безлимитное использование</string>
-    <string name="tariff_pattern">%s - %sгрн</string>
+    <string name="not_available_desc_utog">У вас не осталось минут для использования сервиса.\nВы можете дождаться завтра для получения бесплатных минут либо купить безлимитное использование</string>
+    <string name="not_available_desc">У вас не осталось минут для использования сервиса.\nВы можете купить безлимитное использование</string>
+    <string name="tariff_pattern">%s - $%s</string>
     <string name="permission_rationale_liqpay">Необходимо предоставить доступ к звонкам для завершения процесса покупки</string>
     <string name="call_chat_hint">Введите ваше сообщение</string>
     <string name="message_enter_label">Отправить</string>
@@ -58,10 +60,38 @@
     <string name="fields_required">Все поля обязательны к заполнению</string>
     <string name="login_title">Вход/Регистрация</string>
     <string name="action_continue">Продолжить</string>
-    <string name="should_accept_privacy_policy">Необходимо согласиться с политикой конфиденциальности</string>
+    <string name="should_accept_privacy_policy">Необходимо согласиться с политикой конфиденциальности и условиями использования</string>
     <string name="new_app_version">Вышла версия %s</string>
     <string name="update_required">Пожалуйста, обновите приложение, чтобы продолжить</string>
     <string name="update_recommended">Рекомендуем обновить приложение для более комфортного использования</string>
     <string name="confirmation_desc">СМС с кодом подтверждения было отправлено на номер %s</string>
     <string name="wrong_number">Неправильный номер?</string>
+    <string name="whats_new">Что нового</string>
+    <string name="confirmation_wait">Если вы его еще не получили, подождите немного.\nЭто может занять несколько минут</string>
+    <string name="confirmation_title">Вы получили\nкод подтверждения?</string>
+    <string name="drawer_unlim">Купить безлимит</string>
+    <string name="drawer_utog">Я - член УТОГ</string>
+    <string name="drawer_exit">Выйти</string>
+    <string name="drawer_support">Поддержка</string>
+    <string name="utog_alert_title">Вы состоите в УТОГ?</string>
+    <string name="utog_alert_text">УТОГ предоставляет своим членам выгодные условия использования сервисом переводчиков ЖЯ. Вам необходимо указать свои данные для подтверждения членства в УТОГ</string>
+    <string name="utog_never">Не спрашивать больше</string>
+    <string name="utog_later">Спросить позже</string>
+    <string name="utog_ok">Указать данные</string>
+    <string name="utog_title">Вы состоите в Украинском обществе глухих (УТОГ)?</string>
+    <string name="utog_last_name">Фамилия</string>
+    <string name="utog_first_name">Имя</string>
+    <string name="utog_patronymic">Отчество</string>
+    <string name="utog_member_id">Номер членского билета</string>
+    <string name="utog_cancel">Отмена</string>
+    <string name="utog_continue">Продолжить</string>
+    <string name="utog_success">Успешно</string>
+    <string name="no_emial_client">На устройстве не установлено ни одного почтового клиента</string>
+    <string name="search_title">Поиск</string>
+    <string name="ukraine">Украина</string>
+    <string name="confirm_phone">Проверьте номер телефона</string>
+    <string name="change_number">Изменить номер</string>
+    <string name="review_title">Оцените работу переводчика</string>
+    <string name="review_hint">Что понравилось/не понравилось?</string>
 </resources>
+
