--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Перекладач ЖМ</string>
-    <string name="cancel">Відміна</string>
+    <string name="cancel">Назад</string>
     <string name="current_call">Поточний виклик</string>
-    <string name="err_call_try_later">Під час виклику виникла помилка. Спробуйте пізніше</string>
-    <string name="error_call_failed">Виклик не вдався</string>
+    <string name="err_call_try_later">Під час виклику сталася помилка. Спробуйте пізніше</string>
+    <string name="error_call_failed">Не вдалося здійснити виклик</string>
     <string name="left_for_today">Залишилось на сьогодні</string>
     <string name="main_call_to_action">Натисніть для зв\'язку з перекладачем</string>
     <string name="main_minutes_left">Хвилин залишилось:</string>
     <string name="ok">Ок</string>
     <string name="permission_rationale_call">Для спілкування з перекладачем необхідно надати доступ до камери та мікрофону</string>
-    <string name="video_call_waiting_text">Будь ласка, дочекайтесь доки ми з\'єднаємо вас з перекладачем. Це може зайняти до 5 хвилин</string>
+    <string name="video_call_waiting_text">Будь ласка, дочекайтесь з\'єднання з перекладачем. Це може зайняти до 5 хвилин</string>
     <string name="video_call_waiting_title">Чекайте на відповідь…</string>
     <string name="no_minutes_left">Ви вичерпали щоденні хвилини.\nНові хвилини будут доступні завтра</string>
     <string name="main_wait_minutes_loading">Будь ласка зачекайте…\nПеревіряється залишок хвилин</string>
-    <string name="internet_failure">Ошибка соедиения с сервером. Проверьте ваше интернет соединение</string>
+    <string name="internet_failure">Помилка з\'єднання з сервером. Перевірте з\'єднання з мережею інтернет</string>
     <string name="name_hint">Ваше ім\'я</string>
     <string name="proceed">Продовжити</string>
-    <string name="user_name">Привіт, <u>%s</u></string>
     <string name="user_name_dialog_title">Як Вас звати?</string>
-    <string name="test_mode_notification">Сервіс надається у тестовому режимі\nв робочі дні з 09:00 до 18:00</string>
+    <string name="work_time_info">Сервіс надається в робочі дні\nз %s до %s %s</string>
+    <string name="timezone_ukraine">за Київським часом</string>
+    <string name="timezone">за Московським часом</string>
     <string name="reason_alert_title">Оберіть причину дзвінка</string>
     <string name="call_reason_emergency">Виклик швидкої</string>
     <string name="call_reason_police">Виклик поліції</string>
@@ -35,33 +37,61 @@
     <string name="prompt_phone">Номер телефону</string>
     <string name="prompt_password">Код підтверждення</string>
     <string name="action_request_code">Надіслати код</string>
-    <string name="action_login">Увійти</string>
+    <string name="action_login">Продовжити</string>
     <string name="login_code_helper">Ви отримаєте смс із кодом підтверждення</string>
     <string name="login_code_delay">Наступна спроба буде доступна через %d сек</string>
     <string name="menu_logout">Вийти</string>
     <string name="error_server_base">На жаль, сталася помилка. Спробуйте пізніше</string>
-    <string name="error_validation">Будь ласка, введіть коректні данні</string>
+    <string name="error_validation">Будь ласка, введіть коректні дані</string>
     <string name="error_login">Помилка входу</string>
     <string name="error_outside_working_time">На жаль, ви телефонуєте в неробочий час</string>
     <string name="error_in_call">Ви вже спілкуєтесь на іншому пристрої</string>
-    <string name="error_no_right">Ви не маєте прав на здійснення цієї дії</string>
-    <string name="login_accept"><![CDATA[Я прочитав та згоден з <a href=\'https://getbewarned.com\'>політикою конфеденційності</a>]]></string>
+    <string name="error_no_right">Ви не маєте права здійснювати цю дію</string>
+    <string name="login_accept"><![CDATA[Я прочитав(-ла) та згоден(-а) з <a href=\'https://interpreter.getbw.me/docs/terms_of_use\'>умовами використання</a> та <a href=\'https://interpreter.getbw.me/docs/privacy_policy\'>політикою конфеденційності</a>]]></string>
     <string name="main_active_till">Безлімітні дзвінки до</string>
     <string name="date_format">dd.MM.yy</string>
     <string name="buy_unlim_btn">Придбати безліміт</string>
-    <string name="not_available_desc">У вас не залишилось хвилин для використання сервісу.\nВи можете зачекати до завтра щоб отримати безкоштовні хвилини або прибати безлімітне використання</string>
-    <string name="tariff_pattern">%s - %sгрн</string>
+    <string name="not_available_desc_utog">У вас не залишилось хвилин для використання сервісу.\nВи можете придбати безлімітне використання</string>
+    <string name="not_available_desc">У вас не залишилось хвилин для використання сервісу.\nВи можете зачекати до завтра, щоб отримати безкоштовні хвилини або придбати безлімітне використання</string>
+    <string name="tariff_pattern">%s - $%s</string>
     <string name="permission_rationale_liqpay">Необхідно надати доступ до дзвінків для завершення процессу придбання</string>
     <string name="call_chat_hint">Введіть ваше повідомлення</string>
     <string name="message_enter_label">Надіслати</string>
-    <string name="invalid_phone_format">Невірний формат телефону</string>
+    <string name="invalid_phone_format">Невірний формат номеру телефону</string>
     <string name="fields_required">Всі поля обов\'язкові для заповнення</string>
-    <string name="login_title">Вхід/Регістрація</string>
+    <string name="login_title">Вхід/Реєістрація</string>
     <string name="action_continue">Продовжити</string>
-    <string name="should_accept_privacy_policy">Необхідно погодитися з політикою конфеденційності</string>
+    <string name="should_accept_privacy_policy">Необхідно погодитися з політикою конфеденційності та умовами використання</string>
     <string name="new_app_version">Вийшла версія %s</string>
     <string name="update_required">Будь ласка, оновіть додаток, щоб продовжити</string>
     <string name="update_recommended">Рекомендуємо оновити додаток для більш комфортного використання</string>
     <string name="confirmation_desc">СМС із кодом підтверждення було відправлено на номер %s</string>
     <string name="wrong_number">Невірний номер?</string>
+    <string name="whats_new">Що нового</string>
+    <string name="confirmation_wait">Якщо ви ще його не отримали, будь ласка зачекайте.\nЦе може зайняти декілька хвилин!</string>
+    <string name="confirmation_title">Ви отримали\nкод підтвердження?</string>
+    <string name="drawer_unlim">Придбати безліміт</string>
+    <string name="drawer_utog">Я - член УТОГ</string>
+    <string name="drawer_exit">Вийти</string>
+    <string name="drawer_support">Підтримка</string>
+    <string name="utog_alert_title">Ви - член УТОГ?</string>
+    <string name="utog_alert_text">УТОГ надає своїм членам вигідні умови використання сервісом перекладачів ЖМ. Вам необхідно вказати свої дані для подтвердження членства в УТОГ</string>
+    <string name="utog_never">Більше не питати</string>
+    <string name="utog_later">Запитати пізніше</string>
+    <string name="utog_ok">Вказати дані</string>
+    <string name="utog_title">Ви - є членом Українського товариства глухих (УТОГ)?</string>
+    <string name="utog_last_name">Прізвище</string>
+    <string name="utog_first_name">Ім\'я</string>
+    <string name="utog_patronymic">По батькові</string>
+    <string name="utog_member_id">Номер членського квитка</string>
+    <string name="utog_cancel">Відміна</string>
+    <string name="utog_continue">Продовжити</string>
+    <string name="utog_success">Успішно</string>
+    <string name="no_emial_client">На пристрої не встановлено жодного поштового клієнта</string>
+    <string name="search_title">Пошук</string>
+    <string name="ukraine">Україна</string>
+    <string name="confirm_phone">Перевірте номер телефону</string>
+    <string name="change_number">Змінити номер</string>
+    <string name="review_title">Будь ласка оцініть роботу перекладача</string>
+    <string name="review_hint">Що сподобалося/не сподобалося?</string>
 </resources>
