--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -100,5 +100,26 @@
     <string name="need_help">Не получили код?</string>
     <string name="drawer_share">Рассказать другу</string>
     <string name="share_text">Советую установить Переводчик ЖЯ. Помогает мне решать проблемы. Мне очень нравится. https://interpreter.getbw.me</string>
+    <string name="drawer_requests">Текст-Видео-Перевод</string>
+    <string name="request_send_photo">Загрузить файл</string>
+    <string name="media_image_gallery">Выбрать фото</string>
+    <string name="media_image_camera">Снять фото</string>
+    <string name="media_selector_title">Выбрать изображение</string>
+    <string name="file_uploading">Загрузка файла. Подождите</string>
+    <string name="no_requests_desc">Вы можете попросить наших переводчиков обьяснить при помощи ЖЯ непонятный вам документ. Сфотографируйте его или выберите на устройстве</string>
+    <!--Вы можете попросить наших переводчиков обьяснить на РЖЯ документ или перевести ваше видео на РЖЯ в текст для слышаших-->
+    <string name="no_requests_title">У вас еще нет заявок</string>
+    <string name="status_new">Новая</string>
+    <string name="status_assigned">В работе</string>
+    <string name="status_closed">Закрыта</string>
+    <string name="drawer_scan_qr">Сканер QR кода</string>
+    <string name="btn_reconnect">Переподключиться</string>
+    <string name="btn_close">Закрыть</string>
+    <string name="waiting_for_interpreter">Ожидаем переводчика…</string>
+    <string name="ask_a_question">Задать вопрос</string>
+    <string name="asking_a_question">Отмена</string>
+    <string name="group_session_leave">Отключиться</string>
+    <string name="group_waiting_title">Ожидайте соединения…</string>
+    <string name="group_waiting_text">Пожалуйста, подождите. Это может занять несколько секунд</string>
 </resources>
 
