--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,4 +125,25 @@
     <string name="need_help">Didn\'t receive code?</string>
     <string name="drawer_share">Tell a friend</string>
     <string name="share_text">I advise you to install a SL Interpreter. It helps me to solve problems. I like it. https://interpreter.getbw.me</string>
+    <string name="drawer_requests">Text-Video-Interpretation</string>
+    <string name="request_send_photo">Send file</string>
+    <string name="media_image_gallery">Peek a photo</string>
+    <string name="media_image_camera">Take a photo</string>
+    <string name="media_selector_title">Select image</string>
+    <string name="file_uploading">File uploading. Please wait</string>
+    <string name="no_requests_desc">You can ask our interpreters to describe any document with SL. Capture it with cam or select from device</string>
+    <!--Вы можете попросить наших переводчиков обьяснить на РЖЯ документ или перевести ваше видео на РЖЯ в текст для слышаших-->
+    <string name="no_requests_title">You haven\'t any requests yet</string>
+    <string name="status_new">New</string>
+    <string name="status_assigned">In process</string>
+    <string name="status_closed">Closed</string>
+    <string name="drawer_scan_qr">Scan QR code</string>
+    <string name="btn_reconnect">Reconnect</string>
+    <string name="btn_close">Close</string>
+    <string name="waiting_for_interpreter">Waiting for interpreter…</string>
+    <string name="ask_a_question">Ask a question</string>
+    <string name="asking_a_question">Cancel</string>
+    <string name="group_session_leave">Leave</string>
+    <string name="group_waiting_title">Waiting for connection</string>
+    <string name="group_waiting_text">Please wait. It can take a few seconds</string>
 </resources>
